tests/negative/test_owning_arr_asgn_owning.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc main () () {
    sym f0:(Foo 2) f1:(Foo 2);
    = f0 f1;
};